# ERCOT-UNDERSTANDING

./: .env.example  .gitignore  README.md  index.html.html  pyproject.toml  requirements.txt
config/: nodes.yaml  risk.yaml  scoring.yaml
data/: .gitignore
docs/: CLAUDE.md  INVENTORY.md  PHASE_0_CHECKLIST.md  PRD.md
ercot_dart/: __init__.py  config.py
ercot_dart/backtest/: market_impact.py  performance.py  settlement.py  walk_forward.py
ercot_dart/compliance/: cusum.py  filters.py  wash_trade.py
ercot_dart/etl/: features.py  parsers.py  pipeline.py
ercot_dart/models/: bayesian.py  forecasting_engine.py  garch.py  hmm.py
ercot_dart/trading/: kelly.py  order.py  tier_curve.py
ercot_dart/utils/: logging.py
src/: __init__.py
src/backtest/: engine.py
src/execution/: curtail_hedge.py  tier_generator.py
src/features/: engineering.py
src/ingest/: __init__.py  exceptions.py  reconcile.py  timestamps.md
src/ingest/ercot/: __init__.py  downloader.py  parsers.py  pipeline.py  timestamps.py
src/ingest/live/: __init__.py  asos_weather.py  (+1 more)
src/models/: bayesian_nuts.py  garch.py  hmm.py
src/runners/: daily.py
src/scoring/: composite.py
src/sizing/: kelly.py
tests/backtest/: test_engine.py
tests/execution/: test_curtail_hedge.py  test_tier_generator.py
tests/features/: test_engineering.py
tests/ingest/: test_ercot_parsers.py  test_gas_prices.py  test_weather.py
tests/models/: test_bayesian_nuts.py  test_garch.py  test_hmm.py
tests/runners/: test_daily.py
tests/scoring/: test_composite.py
tests/sizing/: test_kelly.py
(+1 files in other folders)
