[project]
name = "quantum-dart"
version = "0.1.0"
description = "ERCOT DART virtual trading system for QUANTUM_ESR (single-node)"
requires-python = ">=3.11"
dependencies = [
    # Data I/O
    "polars>=0.20.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    # Config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    # Logging
    "structlog>=24.1.0",
    # HTTP
    "httpx>=0.27.0",
    # Regime detection
    "hmmlearn>=0.3.0",
    # GARCH volatility (PRD §M4 non-negotiable)
    "arch>=6.3.0",
    # Bayesian inference (PRD §M5 non-negotiable)
    "pymc>=5.9.0",
    "pytensor>=2.18.0",
    "nutpie>=0.13.0",
    "arviz>=0.18.0",
    # Backtesting
    "vectorbt>=0.26.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    # Linting / typing
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
